Added UX enhancement: Available Processes depending on selected App

--- a/force-app/main/default/classes/AnalyticsDemoDataflowHelper.cls
+++ b/force-app/main/default/classes/AnalyticsDemoDataflowHelper.cls
@@ -201,6 +201,7 @@ public with sharing class AnalyticsDemoDataflowHelper {
         req.setBody(jsonToPost);
         HTTPResponse res = http.send(req);
         String resBody = res.getBody();
+        //System.debug(resBody);
         return (RestApiResponseBody)JSON.deserialize(resBody, RestApiResponseBody.class);
     }
 
