Finished XMD upload for datasets. Process of loading datasets finishes when edgemart has been updated in data manager

--- a/src/classes/LoadDatasetQueueable.cls
+++ b/src/classes/LoadDatasetQueueable.cls
@@ -1,12 +1,14 @@
 public with sharing class LoadDatasetQueueable implements Queueable, Database.AllowsCallouts{
     
+    private Double apiVersion;
     private String sessionId;
     private String insightsAppName;
     private WaveApplicationDataset datasetToLoad;
 
-    public LoadDatasetQueueable(WaveApplicationDataset dataset, String insightsAppId, String sessionId) {
+    public LoadDatasetQueueable(WaveApplicationDataset dataset, String insightsAppId, Double apiVersion, String sessionId) {
         this.datasetToLoad = dataset;
 		this.sessionId = sessionId;
+        this.apiVersion = apiVersion;
         this.insightsAppName = 'SharedApp';
 
         if (String.isNotBlank(insightsAppId)) {
@@ -38,17 +40,55 @@ public with sharing class LoadDatasetQueueable implements Queueable, Database.Al
         insert iedObj;
 
         // Add the Data
-        InsightsExternalDataPart dataPart = new InsightsExternalDataPart();
-        dataPart.InsightsExternalDataId = iedObj.Id;
-        dataPart.PartNumber = 1;
-        Blob csvBlob = Blob.valueof(csvData);
-        Integer size = csvBlob.size();
-        dataPart.dataFile = csvBlob;
-        dataPart.DataLength = size;
-        insert dataPart;
+        // Assumption: 1 character in string = 1 or 2 Bytes
+        Integer bytesPerChunk = 1024 * 1024 * 9; // We want 9 MB chunks
+        Integer charsPerChunk = bytesPerChunk;
+        Integer maxBytesChar = 1;
+        Integer currentFilePtr = 0;
+        List<String> lstChunks = new List<String>();
+        String currentInput = csvData;
+
+        if (WaveConfiguratorUtils.containsDoubleByteCharacters(csvData)) {
+            // There are some characters that span 2 bytes
+            charsPerChunk = charsPerChunk / 2;
+        }
+
+        while(currentFilePtr < csvData.length()){
+            String currentChunk = csvData.mid(currentFilePtr, charsPerChunk);
+            lstChunks.add(currentChunk);
+            currentFilePtr = currentFilePtr + currentChunk.length();
+        }
+
+        Integer dataPartIndex = 1;
+        List<InsightsExternalDataPart> lstDataParts = new List<InsightsExternalDataPart>();
+        
+        for (String dataChunk : lstChunks) {
+            InsightsExternalDataPart dataPart = new InsightsExternalDataPart();
+            dataPart.InsightsExternalDataId = iedObj.Id;
+            dataPart.PartNumber = dataPartIndex;
+            Blob csvBlob = Blob.valueof(dataChunk);
+            Integer size = csvBlob.size();
+            dataPart.dataFile = csvBlob;
+            dataPart.DataLength = size;
+
+            dataPartIndex++;
+            lstDataParts.add(dataPart);
+        }
+        
+        insert lstDataParts;
 
         // Final Step: Manage the Upload
         iedObj.Action = 'Process';
         update iedObj;
+    }
+
+    public static String getDatasetUploadStatus(String datasetDevName){
+        try {
+            InsightsExternalData iedObj = [SELECT Status FROM InsightsExternalData WHERE EdgemartAlias = :datasetDevName ORDER BY CreatedDate DESC LIMIT 1];
+            return iedObj.Status;
+        } 
+        catch (Exception ex) {
+            return '';
+        }
     }
 }
